--- a/index.html
+++ b/index.html
@@ -9,33 +9,47 @@
 </head>
 
 <body>
-    <div id="app" class="container">
-        <div class="form-container">
-            <h1 class="title">Expense Tracker</h1>
-            <div class="input-group">
-                <label for="expenseName">Expense Name:</label>
-                <input type="text" id="expenseName" class="input-field" placeholder="Name" />
+    <main>
+        <div id="app" class="container">
+            <div class="form-container">
+                <h1 class="title">Expense Tracker</h1>
+                <form>
+                    <div class="input-group">
+                        <label for="expenseName">Expense Name:</label>
+                        <input type="text" id="expenseName" class="input-field" placeholder="Name" />
+                    </div>
+                    <div class="input-group">
+                        <label for="expenseAmount">Expense Amount:</label>
+                        <input type="number" id="expenseAmount" class="input-field" placeholder="Amount" />
+                    </div>
+                    <div class="input-group">
+                        <label for="expenseCategory">Category:</label>
+                        <select id="expenseCategory" class="input-field">
+                            <option value="Food">Food</option>
+                            <option value="Transportation">Transportation</option>
+                            <option value="Entertainment">Entertainment</option>
+                            <!-- Add more categories as needed -->
+                        </select>
+                    </div>
+                </form>
+                <button onclick="addExpense()" class="btn">Add Expense</button>
             </div>
-            <div class="input-group">
-                <label for="expenseAmount">Expense Amount:</label>
-                <input type="number" id="expenseAmount" class="input-field" placeholder="Amount" />
+            <div class="result-container">
+                <ul id="expenseList" class="expense-list"></ul>
+                <div class="dropdown-container">
+                    <label for="entryDropdown">Select Entry:</label>
+                    <select id="entryDropdown" class="dropdown" onchange="displaySelected()">
+                        <option value="-1">Select an Entry</option>
+                    </select>
+                </div>
+                <div class="details-container">
+                    <p class="selected-item">Selected Item:</p>
+                    <p id="selectedDetails"></p>
+                </div>
+                <div id="totalDisplay" class="total"></div>
             </div>
-            <button onclick="addExpense()" class="btn">Add Expense</button>
         </div>
-        <div class="result-container">
-            <ul id="expenseList" class="expense-list"></ul>
-            <div class="dropdown-container">
-                <label for="entryDropdown">Select Entry:</label>
-                <select id="entryDropdown" class="dropdown" onchange="displaySelected()">
-                    <option value="-1">Select an Entry</option>
-                </select>
-            </div>
-            <div class="details-container">
-                <p class="selected-item">Selected Item:</p>
-                <p id="selectedDetails"></p>
-            </div>
-        </div>
-    </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
